# CSCI338_Project_2--CLI_Giphy_Tool

./: README.md  check.sh  giphy_api.py  giphy_cli.py  main.py  pyproject.toml
