[tool.poetry]
name = "csci338_project_2--cli_giphy_tool"
version = "0.1.0"
description = "A CLI tool using the Giphy API"
authors = ["SheldonMarshall <smarsha1@unca.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
